--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,104 +7,139 @@
     tools:context=".MainActivity">
 
     <LinearLayout
-        android:layout_width="411dp"
-        android:layout_height="735dp"
-        android:orientation="vertical"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="-2dp">
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
         <Space
             android:layout_width="match_parent"
-            android:layout_height="172dp"
-            android:layout_weight="1" />
+            android:layout_height="21dp" />
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="688dp"
             android:orientation="horizontal">
 
             <Space
                 android:layout_width="wrap_content"
-                android:layout_height="125dp"
+                android:layout_height="match_parent"
                 android:layout_weight="1" />
 
-            <ImageView
-                android:id="@+id/imgUser"
-                android:layout_width="168dp"
-                android:layout_height="wrap_content"
-                tools:srcCompat="@tools:sample/avatars" />
-
             <LinearLayout
-                android:layout_width="216dp"
-                android:layout_height="129dp"
+                android:id="@+id/linearLayout"
+                android:layout_width="355dp"
+                android:layout_height="590dp"
                 android:orientation="vertical">
-
-                <Space
-                    android:layout_width="match_parent"
-                    android:layout_height="17dp" />
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="22dp"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:id="@+id/textView"
-                        android:layout_width="85dp"
-                        android:layout_height="match_parent"
-                        android:text="User Name:"
-                        android:textColor="#1565C0" />
-
-                    <TextView
-                        android:id="@+id/lblUserName"
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:text="TextView" />
-                </LinearLayout>
-
-                <Space
-                    android:layout_width="match_parent"
-                    android:layout_height="17dp" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
 
-                    <TextView
-                        android:id="@+id/textView3"
-                        android:layout_width="87dp"
-                        android:layout_height="wrap_content"
-                        android:text="Followers:"
-                        android:textColor="#1565C0" />
-
-                    <TextView
-                        android:id="@+id/lblFollowers"
+                    <Space
                         android:layout_width="wrap_content"
+                        android:layout_height="125dp"
+                        android:layout_weight="1" />
+
+                    <ImageView
+                        android:id="@+id/imgUser"
+                        android:layout_width="168dp"
                         android:layout_height="wrap_content"
-                        android:text="TextView" />
+                        tools:srcCompat="@tools:sample/avatars" />
+
+                    <LinearLayout
+                        android:layout_width="216dp"
+                        android:layout_height="129dp"
+                        android:orientation="vertical">
+
+                        <Space
+                            android:layout_width="match_parent"
+                            android:layout_height="17dp" />
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="22dp"
+                            android:orientation="horizontal">
+
+                            <TextView
+                                android:id="@+id/textView"
+                                android:layout_width="85dp"
+                                android:layout_height="match_parent"
+                                android:text="User Name:"
+                                android:textColor="#1565C0" />
+
+                            <TextView
+                                android:id="@+id/lblUserName"
+                                android:layout_width="wrap_content"
+                                android:layout_height="match_parent"
+                                android:text="TextView" />
+                        </LinearLayout>
+
+                        <Space
+                            android:layout_width="match_parent"
+                            android:layout_height="17dp" />
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal">
+
+                            <TextView
+                                android:id="@+id/textView3"
+                                android:layout_width="87dp"
+                                android:layout_height="wrap_content"
+                                android:text="Followers:"
+                                android:textColor="#1565C0" />
+
+                            <TextView
+                                android:id="@+id/lblFollowers"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="TextView" />
+
+                        </LinearLayout>
+
+                    </LinearLayout>
+
+                    <Space
+                        android:layout_width="12dp"
+                        android:layout_height="125dp"
+                        android:layout_weight="1" />
 
                 </LinearLayout>
+
+                <TextView
+                    android:id="@+id/textView2"
+                    android:layout_width="match_parent"
+                    android:layout_height="16dp"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:text="PlayLists"
+                    android:textAlignment="center"
+                    android:textColor="#4527A0"
+                    android:textStyle="bold" />
+
+                <ListView
+                    android:id="@+id/lstPlayLists"
+                    android:layout_width="355dp"
+                    android:layout_height="387dp"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_weight="1"
+                    android:scrollbarDefaultDelayBeforeFade="100" />
 
             </LinearLayout>
 
             <Space
-                android:layout_width="12dp"
-                android:layout_height="125dp"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_weight="1" />
 
         </LinearLayout>
 
         <Space
             android:layout_width="match_parent"
-            android:layout_height="172dp"
-            android:layout_weight="1" />
-
-        <ListView
-            android:id="@+id/lstPlayLists"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1" />
+            android:layout_height="23dp" />
 
     </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
